fix modals collapsing into screen

--- a/src/global/globals.scss
+++ b/src/global/globals.scss
@@ -34,5 +34,5 @@
 }
 
 section[role='dialog'] {
-	@apply bottom-20 md:bottom-auto;
+	@apply bottom-20 mx-2 md:bottom-auto md:mx-auto;
 }
